# jerboa

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  JERBOA-LANG.md  Makefile  README.md  better.md  better2.md  better3.md  gerbil-like.md  implement-me.md  jerbuild.ss  libraries.md  newer.md  secure.md  slang.md  whatchanged.md  zig-ideas.md
.github/workflows/: build-macos-libs.yml  ci.yml  docs.yml  test.yml
benchmarks/: bench-core.ss  bench-defstruct.ss  bench-for-or-and.ss  bench-kwargs.ss  bench-method-dispatch.ss  bench-string-append.ss
docs/: TODO.md  actor-model.md  ai-threat.md  anti-cookbook.md  api-index.md  architecture-split.md  async.md  build.md  capability.md  clojure-left.md  clojure-reader.md  clojure-remaining.md  clojure-vs-jerboa.md  compiling-gerbil-projects.md  completion.md  concurrency-extended.md  concurrency.md  core-async.md  cp0-passes.md  data-structures.md  devex.md  distrib.md  distributed.md  divergence.md  effects.md  ffi.md  fiber.md  fix-fibers.md  fuzzing.md  gaps.md  gemini-session.md  goals.md  green-wins.md  harden-usage.md  harden.md  hide.md  implement.md  import-conflicts.md  index.md  jerboa-db.md  (+43 more)
docs/archive/: findings.md  fuzzing.md  goals.md  jerbuild.md  musl.md  security2.md  topsecret.md
etc/: jerboa-mode.el
examples/: chat-server.ss  cli-tool.ss  data-pipeline.ss  hello-api.ss
jerboa-native-rs/: Cargo.toml
jerboa-native-rs/.cargo/: config.toml
jerboa-native-rs/src/: antidebug.rs  boot_encrypt.rs  compress.rs  crypto.rs  duckdb_native.rs  ed25519.rs  embed_crypto.rs  epoll.rs  http_parse.rs  inotify_native.rs  integrity.rs  landlock.rs  lib.rs  panic.rs  pcap_capture.rs  postgres_native.rs  process_ctl.rs  regex_native.rs  seccomp.rs  secure_mem.rs  socks5_server.rs  sqlite.rs  tls.rs  wasm.rs  wasm_sm.rs  x25519.rs  x509.rs
lib/jerboa/: build.sls  cache.sls  cloj.sls  clojure.sls  core.sls  cross.sls  embed.sls  ffi.sls  hot.sls  lock.sls  pkg.sls  prelude.sls  reader.sls  registry.sls  runtime.sls  translator.sls
lib/jerboa/prelude/: clean.sls  safe.sls
lib/jerboa/wasm/: closure.sls  codegen.sls  format.sls  gc.sls  (+3 more)
lib/std/: actor.sls  agent.sls  amb.sls  app.sls  arena.sls  assert.sls  async.sls  binary.sls  borrow.sls  build.sls  cafe.sls  capability.sls  circuit.sls  clojure.sls  clos.sls  compile.sls  component.sls  comptime.sls  concur.sls  config.sls  content-address.sls  contract.sls  contract2.sls  csp.sls  csv.sls  dataframe.sls  datafy.sls  datalog.sls  datetime.sls  deprecation.sls  derive.sls  derive2.sls  distributed.sls  doc.sls  effect.sls  engine.sls  ephemeron.sls  ergo.sls  errdefer.sls  error-advice.sls  (+107 more)
lib/thunderchez/: .gitignore  cairo.sls  curl.sls  ffi-utils.sls  gl.sls  glu.sls  glut.sls  lmdb.sls  nanomsg.sls  netstring.sls  qrencode.sls  redis.sls  sdl2.sls  sql-null.sls  thunder-utils.sls  usb.sls
src/: .jerbuild-hashes
src/std/: nrepl.ss
support/: binary-entry.ss  build-binary.sh  build-boot.ss  build-static-script.sh  build.ss  jerboa-embed.c  jerboa-embed.h  landlock-shim.c  musl-chez-build-user.sh  musl-chez-build.sh
tests/: bench-baseline.scm  bench-fiber.ss  bench-odb.ss  bench-suite.ss  example-musl.ss  test-9p.ss  test-actor-core.ss  test-actor-deque.ss  test-actor-mpsc.ss  test-actor-protocol.ss  test-actor-registry.ss  test-actor-scheduler.ss  test-actor-supervisor.ss  test-actor-transport.ss  test-advanced.ss  test-advice.ss  test-agent.ss  test-amb.ss  test-arena.ss  test-assert.ss  test-async-await.ss  test-async-stream.ss  test-async.ss  test-atom.ss  test-audit.ss  test-batch3.ss  test-batch4.ss  test-batch5.ss  test-batch6.ss  test-benchmark.ss  test-better.ss  test-better2.ss  test-better3.ss  test-binary-type.ss  test-binary.ss  test-build-tools.ss  test-build-watch.ss  test-build.ss  test-cache.ss  test-cage.ss  (+246 more)
tests/vm/: run-freebsd-tests.sh
tools/: check-doc-examples.sh  gen-api-docs.ss  jerboa-lsp.ss
(+454 files in other folders)
