[package]
name = "jerboa-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ring = "0.17"
scrypt = "0.11"
flate2 = "1"
regex = "1"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"
inotify = { version = "0.11", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
