[package]
name = "jerboa-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ring = "0.17"
scrypt = "0.11"
flate2 = "1"
regex = "1"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rcgen = { version = "0.13", features = ["ring", "pem"] }
time = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
webpki-roots = "0.26"
duckdb = { version = "1", features = ["bundled"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11", default-features = false }

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
