[package]
name = "jerboa-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"

# Always-on lightweight deps
ring = "0.17"
flate2 = "1"
regex = "1"

# TLS (rustls + x509/cert generation)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
rustls-pki-types = { version = "1", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }
rcgen = { version = "0.13", features = ["ring", "pem"], optional = true }
time = { version = "0.3", optional = true }
httparse = { version = "1", optional = true }

# Crypto (scrypt, argon2, x25519, ed25519)
scrypt = { version = "0.11", optional = true }
argon2 = { version = "0.5", optional = true }
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }
ed25519-dalek = { version = "2", features = ["hazmat"], optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

# Database
duckdb = { version = "1", features = ["bundled"], optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
postgres = { version = "0.19", optional = true }

# WASM
wasmi = { version = "0.40", optional = true }
getrandom = { version = "0.2", optional = true }

# SpiderMonkey (JS engine)
mozjs = { git = "https://github.com/servo/mozjs.git", optional = true, default-features = false, features = ["jit", "libz-sys"] }
mozjs_sys = { git = "https://github.com/servo/mozjs.git", optional = true }

# Packet capture
rscap = { version = "0.3", optional = true }

[features]
default = ["tls"]

# Individual features — pick what your project needs
tls = ["rustls", "rustls-pki-types", "rustls-pemfile", "webpki-roots", "rcgen", "time", "httparse"]
crypto = ["scrypt", "argon2", "x25519-dalek", "ed25519-dalek", "hkdf", "sha2"]
sqlite = ["rusqlite"]
duckdb_feat = ["duckdb"]
postgres_feat = ["postgres"]
wasm = ["wasmi", "getrandom"]
pcap = ["rscap"]
spidermonkey = ["mozjs", "mozjs_sys"]

# Full feature set — backward compatible, what jerboa itself uses
full = ["tls", "crypto", "sqlite", "duckdb_feat", "postgres_feat", "wasm", "pcap"]

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
